--- a/headphones/styles.css
+++ b/headphones/styles.css
@@ -1,33 +1,46 @@
+@media (min-width: 700px) {
+  .menu-icon {
+    display: none;
+  }
+}
 * {
   font-family: "Source Sans 3", sans-serif;
   padding: 0;
   margin: 0;
+  zoom: 99%;
+  scroll-behavior: smooth;
   cursor: default;
 }
 body {
   color: #ffff;
 }
-
-.menu-icon {
-  display: none;
+.black-font,
+::placeholder {
+  color: #071629;
 }
+
 .landing-wrapper {
   background-image: url("./assets/background.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
-header {
+header,
+.footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 34px 200px;
+  padding: 34px 15%;
 }
 nav ul {
   list-style: none;
   display: flex;
-  gap: 53px;
+  gap: 25px;
   font-weight: 500;
   cursor: pointer;
+}
+nav ul li a {
+  color: #ffff;
+  text-decoration: none;
 }
 nav ul li a:hover {
   color: #ff6565;
@@ -37,7 +50,9 @@ main {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin: 270px 70px 25px 70px;
+  margin: 270px 70px 0 70px;
+  gap: 45px;
+  text-align: center;
 }
 button {
   background-color: #ff6565;
@@ -47,18 +62,125 @@ button {
   border: none;
   padding: 10px 25px;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 0.8rem;
   text-transform: uppercase;
   cursor: pointer;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.35); /* Drop shadow: vertical offset, blur, and slight opacity */
   transition: box-shadow 0.3s ease, transform 0.3s ease; /* Smooth transition */
 }
-
 .text {
-  margin: 50px 25% 70px 25%;
+  margin: 60px 20%;
+  text-align: center;
+  font-size: 16px;
+}
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 45px;
   text-align: center;
 }
+.all-cards {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 0 80px 100px 80px;
+  gap: 70px;
+  flex-wrap: wrap;
+}
+.card {
+  display: block;
+  width: 207px;
+}
+.card p {
+  margin-top: 40px;
+}
+.card img {
+  width: 60px;
+  height: 70px;
+}
+h2 {
+  margin-top: 100px;
+  font-size: 32px;
+}
+#results {
+  background-image: url("assets/background\ results.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.pentagon {
+  height: 190px;
+  width: 190px;
+  background-color: #ff6565;
+  clip-path: polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%);
+  align-content: center;
+}
+.pentagon h3 {
+  font-size: 46px;
+  font-weight: 700;
+}
+.pentagon p {
+  font-size: 14pxx;
+}
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+  margin-top: 50px;
+}
+input,
+textarea {
+  border: none;
+  border-bottom: 1.5px solid rgba(128, 128, 128, 0.63);
+  width: 15rem;
+}
+::placeholder {
+  font-weight: 800;
+  font-size: 14px;
+}
+footer section {
+  background-color: #071629;
+  height: 249px;
+  margin: 0;
+}
+.footer {
+  padding: 105px 90px 50px 90px;
+  width: 80%;
+}
+.social-media {
+  display: flex;
+  gap: 30px;
+  font-size: 20px;
+  cursor: pointer;
+}
+footer section p {
+  text-align: center;
+  font-size: 12px;
+  color: #666;
+}
+@media (max-width: 699px) {
+  header nav ul {
+    display: none;
+  }
+  header {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: start;
+    gap: 15%;
+  }
+  .menu-icon {
+    font-size: 25px;
+    cursor: pointer;
+    text-decoration: none; /* Ensure no underline */
+  }
 
-.black-font {
-  color: #071629;
+ 
+  .footer {
+    flex-direction: column;
+    padding: 10%;
+    gap: 1rem;
+  }
 }
